src/objects/Sales_Event__c.object
<CustomObject>
    <fields>
        <fullName>Confirmed_End_Date__c</fullName>
        <label>Confirmed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed_Start_Date__c</fullName>
        <label>Confirmed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_team_Hours__c</fullName>
        <label>Demo Team Hours</label>
        <summarizedField>Demo_Team__c.Hours__c</summarizedField>
        <summaryForeignKey>Demo_Team__c.Sales_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventSalesSupporterCount__c</fullName>
        <description>Calculate the count of Supporters for the Sales Event who submitted feedback</description>
        <label>EventSalesSupporterCount</label>
        <summarizedField>Sales_Event_Feedback__c.SalesEventFeedbackCount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Event_Feedback__c.Feedback_Role__c</field>
            <operation>equals</operation>
            <value>Supporter</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback__c.Sales_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EventSalesSupporterYesCount__c</fullName>
        <description>Calculate the count of Yes answers by Supporters for the Sales Event who submitted feedback</description>
        <label>EventSalesSupporterYesCount</label>
        <summarizedField>Sales_Event_Feedback__c.SalesEventFeedbackYesCount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Event_Feedback__c.Feedback_Role__c</field>
            <operation>equals</operation>
            <value>Supporter</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback__c.Sales_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Event_Goals__c</fullName>
        <label>Event Goals</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Event Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Owner_Total_Score__c</fullName>
        <formula>IF((SalesEventFeedbackLeadOwnerCount__c = 0) ,0, (ROUND(SalesEventFeedbackLeadOwnerYesCount__c  /  SalesEventFeedbackLeadOwnerCount__c, 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Owner Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Supporter_Total_Score__c</fullName>
        <formula>IF((EventSalesSupporterCount__c = 0) ,0, (ROUND(EventSalesSupporterYesCount__c /  EventSalesSupporterCount__c, 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Supporter Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Demonstration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sale Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI / RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consulting Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Workshop Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GW_Public_ID__c</fullName>
        <externalId>true</externalId>
        <label>GW Public ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Of_People__c</fullName>
        <description>Calculated list of people based on who participated</description>
        <label>People</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Events</relationshipLabel>
        <relationshipName>Sales_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Original_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original_Request</label>
        <referenceTo>ResourceRequest__c</referenceTo>
        <relationshipLabel>Sales Events</relationshipLabel>
        <relationshipName>Sales_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preparation_Hours__c</fullName>
        <label>Prep Hours</label>
        <summarizedField>Preparation__c.Hours__c</summarizedField>
        <summaryForeignKey>Preparation__c.Sales_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Presentation_Type__c</fullName>
        <label>Presentation Type</label>
        <picklist>
            <controllingField>Event_Type__c</controllingField>
            <picklistValues>
                <fullName>On-site</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFx_External_Due__c</fullName>
        <label>RFP External Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFx_Internal_Due__c</fullName>
        <label>RFP Internal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFx_Received__c</fullName>
        <label>RFP Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Billing_Country__c</fullName>
        <formula>Opportunity__r.Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report_Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Event_Date_Fiscal_Month__c</fullName>
        <formula>CASE(MONTH( Confirmed_End_Date__c ),
1, &quot;06-Jan&quot; ,
2, &quot;07-Feb&quot;,
3, &quot;08-Mar&quot;,
4, &quot;09-Apr&quot;,
5, &quot;10-May&quot;,
6, &quot;11-Jun&quot;,
7, &quot;12-Jul&quot;,
8, &quot;01-Aug&quot;,
9, &quot;02-Sep&quot;,
10, &quot;03-Oct&quot;,
11, &quot;04-Nov&quot;,
12, &quot;05-Dec&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Event Date Fiscal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Event_Date_Fiscal_Period__c</fullName>
        <formula>CASE(MONTH(Confirmed_End_Date__c),
1, &quot;Q2&quot; ,
2, &quot;Q3&quot;,
3, &quot;Q3&quot;,
4, &quot;Q3&quot;,
5, &quot;Q4&quot;,
6, &quot;Q4&quot;,
7, &quot;Q4&quot;,
8, &quot;Q1&quot;,
9, &quot;Q1&quot;,
10, &quot;Q1&quot;,
11, &quot;Q2&quot;,
12, &quot;Q2&quot;,
&quot;None&quot;)

&amp; &quot;-&quot;

&amp; IF((MONTH(Confirmed_End_Date__c) &gt;= 8 &amp;&amp; MONTH(Confirmed_End_Date__c) &lt;= 12),
TEXT (YEAR(Confirmed_End_Date__c)+1) ,
TEXT (YEAR(Confirmed_End_Date__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Event Date Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Result_Date_Fiscal_Period__c</fullName>
        <formula>CASE(MONTH(Report_Result_Date__c),
1, &quot;Q2&quot; ,
2, &quot;Q3&quot;,
3, &quot;Q3&quot;,
4, &quot;Q3&quot;,
5, &quot;Q4&quot;,
6, &quot;Q4&quot;,
7, &quot;Q4&quot;,
8, &quot;Q1&quot;,
9, &quot;Q1&quot;,
10, &quot;Q1&quot;,
11, &quot;Q2&quot;,
12, &quot;Q2&quot;,
&quot;None&quot;)

&amp; &quot;-&quot;

&amp; IF((MONTH(Report_Result_Date__c) &gt;= 8 &amp;&amp; MONTH(Report_Result_Date__c) &lt;= 12),
TEXT (YEAR(Report_Result_Date__c)+1) ,
TEXT (YEAR(Report_Result_Date__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Result Date Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Result_Date__c</fullName>
        <formula>Opportunity__r.Report_Result_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report_Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesEventFeedbackLeadOwnerCount__c</fullName>
        <label>SalesEventFeedbackLeadOwnerCount</label>
        <summarizedField>Sales_Event_Feedback__c.SalesEventFeedbackCount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Event_Feedback__c.Feedback_Role__c</field>
            <operation>equals</operation>
            <value>Lead, Owner</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback__c.Sales_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesEventFeedbackLeadOwnerYesCount__c</fullName>
        <label>SalesEventFeedbackLeadOwnerYesCount</label>
        <summarizedField>Sales_Event_Feedback__c.SalesEventFeedbackYesCount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Event_Feedback__c.Feedback_Role__c</field>
            <operation>equals</operation>
            <value>Lead, Owner</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Event_Feedback__c.Sales_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Event_Feedback_Region__c</fullName>
        <formula>TEXT(Opportunity__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Event Feedback Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage when the event is originally created.</description>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Tentative</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Indicator_Flag__c</fullName>
        <formula>IF ((ROUND(SalesEventFeedbackLeadOwnerYesCount__c/SalesEventFeedbackLeadOwnerCount__c,2)) &gt; 0 &amp;&amp; (ROUND(SalesEventFeedbackLeadOwnerYesCount__c/SalesEventFeedbackLeadOwnerCount__c,2)) &lt; 1 , &apos;Mixed&apos; ,
IF ((ROUND(SalesEventFeedbackLeadOwnerYesCount__c/SalesEventFeedbackLeadOwnerCount__c,2)) = 1 , &apos;Positive&apos;,
IF ((ROUND(SalesEventFeedbackLeadOwnerYesCount__c/SalesEventFeedbackLeadOwnerCount__c,2)) = 0 , &apos;Negative&apos;,
&apos;Other&apos;   
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Indicator Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Indicator__c</fullName>
        <formula>IF((SalesEventFeedbackLeadOwnerCount__c = 0),&apos;&apos;, HYPERLINK(&apos;apex/QuestionsSummaryView?Id=&apos;+ Id , TEXT(ROUND(SalesEventFeedbackLeadOwnerYesCount__c/SalesEventFeedbackLeadOwnerCount__c,2))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Indicator_temp__c</fullName>
        <formula>IF((SalesEventFeedbackLeadOwnerCount__c = 0),&apos;&apos;,  TEXT(ROUND(SalesEventFeedbackLeadOwnerYesCount__c/SalesEventFeedbackLeadOwnerCount__c,2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Success Indicator - temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Consulting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value Consulting</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ordered_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(Status__c) = &quot;Confirmed&quot;,
  Confirmed_Start_Date__c &gt; Confirmed_End_Date__c
)</errorConditionFormula>
        <errorDisplayField>Confirmed_End_Date__c</errorDisplayField>
        <errorMessage>The Confirmed End date cannot be before the Confirmed Start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Events_Confirmed_With_Dates</fullName>
        <active>true</active>
        <description>If confirmed, make sure there are confirmed dates specified</description>
        <errorConditionFormula>AND(
   TEXT(Status__c) = &quot;Confirmed&quot;,
   TEXT(Event_Type__c)  &lt;&gt;  &apos;RFI / RFP&apos;,
   OR(
      ISNULL(Confirmed_Start_Date__c),
      ISNULL(Confirmed_End_Date__c)
     )
   )</errorConditionFormula>
        <errorMessage>A confirmed event must have valid Start and End dates</errorMessage>
    </validationRules>
</CustomObject>